# some-random-api-rs

./: Cargo.toml
src/: client.rs  lib.rs  main.rs  models.rs
src/models/: animals.rs  animu.rs  mod.rs
