[package]
name = "some_random_api"
version = "0.1.0"
edition = "2021"
authors = ["Aurelio Danilo <contact@aurelio.swiss>"]
description = "Rust wrapper for some-random-api.com"
license = "MIT"
repository = "https://github.com/aureliodanilo/some-random-api-rs"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "tokio-runtime"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
